--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,8 @@ version = "0.1.0"
 authors = ["Mark Rowe <mrowe@bdash.net.nz>"]
 
 [dependencies]
-itertools = "0.3.21"
 argparse = "0.2.0"
+itertools = "0.3.21"
+libc = "0.1.8"
+unreachable = "0.0.2"
+vec_map = "0.0.1"
