--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ itertools = "0.3.21"
 libc = "0.1.8"
 unreachable = "0.0.2"
 vec_map = "0.0.1"
+syscall = "0.2.1"
 
 [dependencies.llvm-alt]
 git = "https://github.com/TomBebbington/llvm-rs.git"
